kubernetes/Manifest/manifest.yaml
---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: hamzadevops
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        agentpool: worker
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "app"
          effect: "NoSchedule"
      containers:
        - image: mysql:latest
          name: mysql
          resources:
            requests:
              memory: "500Mi" 
              cpu: "250m"     
            limits:
              memory: "1Gi" 
              cpu: "500m"     
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc

---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hamzadevops
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql

---
# PiEvent Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventmanagement
  namespace: hamzadevops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventmanagement
  template:
    metadata:
      labels:
        app: eventmanagement
    spec:
      nodeSelector:
        agentpool: worker
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "app"
          effect: "NoSchedule"
      containers:
        - name: eventmanagement
          image: hamzakalech/event-management:v96
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi" 
              cpu: "150m"     
            limits:
              memory: "1Gi" 
              cpu: "250m"     
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8083
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/actuator/health/readiness
              port: 8083
            initialDelaySeconds: 90
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3

---
# PiEvent Service
apiVersion: v1
kind: Service
metadata:
  name: eventmanagement-service
  namespace: hamzadevops
spec:
  type: ClusterIP 
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: eventmanagement

---
# Angular Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: hamzadevops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      nodeSelector:
        agentpool: worker
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "app"
          effect: "NoSchedule"
      containers:
        - name: angular-app
          image: hamzakalech/my-angular-app:3.0

          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

---
# Angular Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: hamzadevops
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: angular-app
