kubernetes/Manifest/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: hamzadevops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hamzakalech.com
      secretName: myapp-tls
  rules:
    - host: hamzakalech.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eventmanagement-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
